<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Keyblade Viewer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strength">Strength</string>
    <string name="magic">Magic</string>
    <string name="ability">Ability</string>
    <string name="title_activity_keyblade_list">KeybladeListActivity</string>
    <string name="title_activity_keyblade_stat_view">KeybladeStatView</string>
    <string name="kh_I">Kingdom Hearts I</string>
    <string name="kh_II">Kingdom Hearts II</string>
    <string name="kh_bbs">Birth By Sleep</string>
    <string name="kh_3d">Dream Drop Distance</string>
    <string name="kh_com">Chain of Memories</string>
    <string name="kh_days">358/2 Days</string>

</resources>
